[UI] - Update get location client, Fix websocket, Shipper can see payment status || [BACK-END] - Update finish_order views for finishing order have to change payment_status to paid

--- a/website/fe-web(1)/src/styles/checkout.css
+++ b/website/fe-web(1)/src/styles/checkout.css
@@ -17,6 +17,26 @@
     align-items: center;
     z-index: 999;
 }
+.btn-location {
+    padding: 10px 16px;
+    background: #0078ff;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    font-size: 14px;
+    cursor: pointer;
+    transition: 0.25s;
+}
+
+.btn-location:hover {
+    background: #005fcc;
+}
+
+.btn-location:disabled {
+    background: #9fc3ff;
+    cursor: not-allowed;
+}
+
 
 /* Popup box */
 .voucher-popup {
